syntax = "proto3";
package product;

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}

message ProductId {
  string id = 1;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  float price = 3;
}

message Empty {}

message ProductList {
  repeated Product products = 1;
}

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (Product);
  rpc GetProduct(ProductId) returns (Product);
  rpc ListProducts(Empty) returns (ProductList);
}
